tests/ui/closures/2229_closure_analysis/issue-88476.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/issue-88476.rs:20:13
   |
LL |     let x = #[crablangc_capture_analysis] move || {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/issue-88476.rs:47:13
   |
LL |     let c = #[crablangc_capture_analysis] move || {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/issue-88476.rs:20:39
   |
LL |       let x = #[crablangc_capture_analysis] move || {
   |  _______________________________________^
LL | |
LL | |
LL | |
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing f[(0, 0)] -> ImmBorrow
  --> $DIR/issue-88476.rs:25:26
   |
LL |         println!("{:?}", f.0);
   |                          ^^^

error: Min Capture analysis includes:
  --> $DIR/issue-88476.rs:20:39
   |
LL |       let x = #[crablangc_capture_analysis] move || {
   |  _______________________________________^
LL | |
LL | |
LL | |
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture f[] -> ByValue
  --> $DIR/issue-88476.rs:25:26
   |
LL |         println!("{:?}", f.0);
   |                          ^^^

error: First Pass analysis includes:
  --> $DIR/issue-88476.rs:47:39
   |
LL |       let c = #[crablangc_capture_analysis] move || {
   |  _______________________________________^
LL | |
LL | |
LL | |
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing character[(0, 0)] -> ImmBorrow
  --> $DIR/issue-88476.rs:52:24
   |
LL |         println!("{}", character.hp)
   |                        ^^^^^^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/issue-88476.rs:47:39
   |
LL |       let c = #[crablangc_capture_analysis] move || {
   |  _______________________________________^
LL | |
LL | |
LL | |
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture character[(0, 0)] -> ByValue
  --> $DIR/issue-88476.rs:52:24
   |
LL |         println!("{}", character.hp)
   |                        ^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `crablangc --explain E0658`.
